<resources>
    <string name="Control_gestures">手势控制示意图:</string>
    <string name="Folders">文件夹</string>
    <string name="_current_chapter">正在阅读的章节</string>
    <string name="add_bookmark">增加书签</string>
    <string name="add_catalog">增加新书库</string>
    <string name="add_catalog_failed">无效的书库地址.</string>
    <string name="add_catalog_hint">手工增加新的OPDS在线书库.</string>
    <string name="add_new_bookmark">增加新书签</string>
    <string name="add_to_desktop">创建桌面快捷方式</string>
    <string name="add_to_favorites">加入我的珍藏</string>
    <string name="adjust_fontsize_by_side">擦动屏幕边沿调节字体大小</string>
    <string name="after_open_book">打开一个书籍文件之后:</string>
    <string name="align_justified">两边对齐</string>
    <string name="all_books">全部书签</string>
    <string name="allow_scroll_horizontally">允许左右划动屏幕翻页</string>
    <string name="alltime">全部</string>
    <string name="annotation">标注</string>
    <string name="app">应用</string>
    <string name="arbitrary_order_support_hint">自定义书籍位置只支持按书名排序, 不支持当前选择的排序方式</string>
    <string name="ask_upzipfile">要解压文件吗?</string>
    <string name="auto">自动</string>
    <string name="auto_import_new_books">自动把主目录的新书籍导入到书架</string>
    <string name="auto_scroll_control">选择自动滚屏模式:</string>
    <string name="auto_theme">自动日夜模式切换</string>
    <string name="auto_theme_option1">生效时间</string>
    <string name="auto_theme_option2">新亮度</string>
    <string name="auto_theme_tip1">执行条件: 上次阅读是在晚上</string>
    <string name="auto_theme_tip2">执行条件: 恢复阅读</string>
    <string name="available_formats">可下载格式:</string>
    <string name="back_key">返回键</string>
    <string name="background_color">背景颜色</string>
    <string name="background_colorv">背景颜色</string>
    <string name="background_image">背景图片</string>
    <string name="background_imagev">背景图片</string>
    <string name="backup">备份</string>
    <string name="backup_failed">备份失败</string>
    <string name="backup_folder">备份目录:</string>
    <string name="backup_in_wifi">只在WIFI网络下备份</string>
    <string name="backup_reading_files">自动备份到Dropbox的/Apps/Books目录</string>
    <string name="backup_succes">备份成功</string>
    <string name="backup_to">备份到:</string>
    <string name="bluelight_filter">蓝色光波过滤</string>
    <string name="bluelight_filter_enabled">已启用蓝色光波过滤.</string>
    <string name="bluelight_filter_opacity">过滤量</string>
    <string name="bold">字体加粗</string>
    <string name="book_author">作者:</string>
    <string name="book_cover">封面</string>
    <string name="book_description">简介:</string>
    <string name="book_edit">编辑书籍信息</string>
    <string name="book_favorite">加入珍藏:</string>
    <string name="book_favorite_hint">分类名(可选)</string>
    <string name="book_found">搜索结果:</string>
    <string name="book_info">书籍信息</string>
    <string name="book_information">书籍信息</string>
    <string name="book_labels">分类标识</string>
    <string name="book_name">书名(可留空,支持通配符):</string>
    <string name="book_shelf_options">我的书架:</string>
    <string name="book_tags">标签:</string>
    <string name="book_title">书名:</string>
    <string name="bookmark">书签</string>
    <string name="bookmark_manually">在创建书签前输入书签名</string>
    <string name="books_on_shelf">书架书籍总数</string>
    <string name="books_only_option">只搜索书籍文件</string>
    <string name="bottom_margin">下边页面空白</string>
    <string name="bottom_top">从下向上划动</string>
    <string name="brightness">亮度:</string>
    <string name="brightness_edge">调整亮度所用边框位置:</string>
    <string name="bug_report">问题反馈</string>
    <string name="button_autoscroll">自动滚屏</string>
    <string name="button_bookmarks">书签和标注</string>
    <string name="button_brightness">亮度调节</string>
    <string name="button_chapters">章节目录</string>
    <string name="button_daynight">白天/晚上模式切换</string>
    <string name="button_fontsize">文字大小</string>
    <string name="button_options">选项菜单</string>
    <string name="button_orientation">屏幕方向</string>
    <string name="button_search">搜索</string>
    <string name="button_selecttext">选择文本</string>
    <string name="button_shutdown">关闭</string>
    <string name="button_speak">朗读</string>
    <string name="buy_pro_version">购买专业版</string>
    <string name="camera_key">摄像头键</string>
    <string name="cancel">取消</string>
    <string name="catalog_example">书库地址范例:</string>
    <string name="catalog_name">书库名(可选):</string>
    <string name="catalog_url">书库网址:</string>
    <string name="change_cover">选择封面...</string>
    <string name="change_cover_hint">封面文字(可选)</string>
    <string name="chapter_end">翻页加载下一章</string>
    <string name="chapter_split_hint">章节第[%s]部分结束, 翻页加载下一部分</string>
    <string name="chapters">章节目录</string>
    <string name="chars_in_book">总字数</string>
    <string name="clear_all_statistics">清空全部阅读统计</string>
    <string name="clear_dict_history">清空</string>
    <string name="click_ttf_in_browser">提示: 点击一个字体链接进行下载</string>
    <string name="confirm_delete">确认删除文件:</string>
    <string name="confirmation">确认</string>
    <string name="connect_wait">正在连接网络, 请稍候...</string>
    <string name="control_options">控制选项</string>
    <string name="copy">拷贝</string>
    <string name="copy_text">拷贝</string>
    <string name="copy_to_clipboard">文本已复制到剪贴板</string>
    <string name="cover_with_progress">在封面上显示阅读进度</string>
    <string name="current_chapter">章节:</string>
    <string name="current_page">当前页码</string>
    <string name="customize_bottom_bar1">自定义阅读器工具栏</string>
    <string name="customize_dictionary">自定义词典设置</string>
    <string name="date_read_history">阅读历史记录:</string>
    <string name="day_theme">白天模式</string>
    <string name="default_favorite_name">(默认分类)</string>
    <string name="delete">删除</string>
    <string name="delete_catalog">请确认是否删除书库:</string>
    <string name="delete_theme">请确认是否删除配色方案:</string>
    <string name="dest_language">目标语言:</string>
    <string name="dict_hint">词典选择(可选用本地词典或在线词典):</string>
    <string name="dict_history">字典历史记录</string>
    <string name="dict_install">是否安装这个离线词典? - 安装完成后请先按词典提示, 在词典里设置好所要采用的词库.</string>
    <string name="dictionary">词典</string>
    <string name="direct_highlight">允许长按+拖动操作直接标注文本</string>
    <string name="disable_audio_focus">停止使用AudioFocus与其它语音应用进行交互(允许TTS一直在后台运行)</string>
    <string name="disable_css">禁用电子书内置的CSS样式表</string>
    <string name="disable_led">关闭LED键背景灯, 当屏幕亮度调整到低于</string>
    <string name="disable_led_at_night">晚上模式时关闭LED键背景灯</string>
    <string name="disabled_by">请先取消这个选项:</string>
    <string name="disablemove">触碰屏幕时禁止页面上下滑动</string>
    <string name="dismiss">取消</string>
    <string name="do_not_ask_again">不再询问</string>
    <string name="download">下载</string>
    <string name="download_files">下载文件</string>
    <string name="downloaded">下载完成:</string>
    <string name="dpad_center">中间确定键</string>
    <string name="dpad_down">方向键向下</string>
    <string name="dpad_left">方向键向左</string>
    <string name="dpad_right">方向键向右</string>
    <string name="dpad_up">方向键向上</string>
    <string name="dropbox_sync_again">您的Dropbox连接需要重新授权, 是否继续?</string>
    <string name="dual_page_with_book_style">采用仿真书籍背景</string>
    <string name="edit_catalog">编辑书库</string>
    <string name="end_of_book">全书结束</string>
    <string name="epub_books">EPUB/UMD/FB2</string>
    <string name="epub_chapter_end_prompt_string">提示内容:</string>
    <string name="epub_embedded_fonts">使用书籍内置字体</string>
    <string name="epub_embedded_fonts_missied" formatted="false">没有找到字体文件: %s (请点击字体名搜索下载字体文件, 并保存到目录 %s)</string>
    <string name="error">错误</string>
    <string name="exit">退出</string>
    <string name="export">导出</string>
    <string name="export_failed">导出失败.</string>
    <string name="export_success">导出成功:</string>
    <string name="eyes_turn_page">允许眼球追踪翻页</string>
    <string name="fab_option">显示继续阅读浮动按键</string>
    <string name="fab_tip">全局浮动按键将打开最后阅读的书籍, 你可以在设置窗口里隐藏它.</string>
    <string name="file_manager">文件管理</string>
    <string name="file_mode_add_to_favorite">珍藏</string>
    <string name="file_size">文件大小</string>
    <string name="file_typ_all">全部</string>
    <string name="file_type">文件类型</string>
    <string name="filename">文件名</string>
    <string name="files">文件</string>
    <string name="files_with_detail">显示文件详细信息</string>
    <string name="fill_color">填充颜色</string>
    <string name="filter">时间:</string>
    <string name="finger_gesture_control">屏幕划动手势</string>
    <string name="fix_bar_on_top">固定顶部工具栏</string>
    <string name="flip_animation">翻页动画</string>
    <string name="flip_back_face">背面颜色:</string>
    <string name="flip_speed">翻页速度</string>
    <string name="folder_not_exists">目录不存在.</string>
    <string name="font_color">字体颜色</string>
    <string name="font_color_only">只更改颜色配置</string>
    <string name="font_colorv">文字颜色</string>
    <string name="font_folder">字体目录:</string>
    <string name="font_name">字体选择</string>
    <string name="font_scale">字体伸缩</string>
    <string name="font_size">文字大小</string>
    <string name="fontshadow">字体阴影</string>
    <string name="fontsize_edge">调整字体大小所用边框位置:</string>
    <string name="front_page">首页</string>
    <string name="full_line_at_bottom">页底只显示完整行</string>
    <string name="full_screen_mode">全屏模式</string>
    <string name="headset_key">耳机按键</string>
    <string name="highlight">高亮</string>
    <string name="highlight_color">颜色</string>
    <string name="history">历史记录</string>
    <string name="home_key">主页键</string>
    <string name="hours">小时</string>
    <string name="hyphenation">断字规则</string>
    <string name="hyphenation_dict">断字词典:</string>
    <string name="iamreading">"I'm reading"</string>
    <string name="images_folder">图片目录:</string>
    <string name="immersive_full_screen">浸入式全拼(隐藏系统按键栏)</string>
    <string name="import_ebooks">导入</string>
    <string name="import_ebooks2">导入书籍</string>
    <string name="import_failed">导入失败.</string>
    <string name="import_not_same_file">不是同一本书, 导入失败.</string>
    <string name="import_success">导入成功.</string>
    <string name="include_hiden_files">搜索隐藏文件夹</string>
    <string name="include_sub_folder">同时搜索子目录</string>
    <string name="indent_paragraph">段落首行缩进</string>
    <string name="init_application">正在初始化阅读器...</string>
    <string name="input_key">请输入查找关键字</string>
    <string name="inputpagenumber">请输入页码:</string>
    <string name="intelligentParagraph">段落智能划分</string>
    <string name="invalid_file">不支持此文件</string>
    <string name="italic">斜体</string>
    <string name="keep_health_by">使用下面选项以保护视力:</string>
    <string name="keep_one_line">翻页时保留一行</string>
    <string name="keep_screen_awake">阅读时保持屏幕长亮</string>
    <string name="key_press_control">硬件按钮:</string>
    <string name="landscape_2_page">横屏时显示双页</string>
    <string name="language">界面语言</string>
    <string name="layout">布局</string>
    <string name="left_margin">左边页面空白</string>
    <string name="left_right">从左向右划动</string>
    <string name="line_space">行间距</string>
    <string name="link_not_found">没有找到.</string>
    <string name="load_from_theme">读取配色方案</string>
    <string name="load_theme">加载配色方案:</string>
    <string name="loaded_all">加载完成</string>
    <string name="loading">加载中</string>
    <string name="loading_info">正在加载文件, 正稍等片刻...</string>
    <string name="localfiles">本地文件</string>
    <string name="location">位置</string>
    <string name="login">用户登录</string>
    <string name="long_tap_interval">长按事件激活时间(秒)</string>
    <string name="long_tap_select_image_in_browser">提示: 长按一个图片可下载该图片</string>
    <string name="long_time_tap_control">长按屏幕</string>
    <string name="low_memory_limits">已打开文本大小:</string>
    <string name="magnifier">启用放大镜</string>
    <string name="main_folder">主目录</string>
    <string name="market_not_install">提示:官方电子市场尚未安装.</string>
    <string name="media_next">播放下一首</string>
    <string name="share">分享</string>
    <string name="show_highlight_template">在文本选择工具条上方显示颜色快速选择模板</string>
    <string name="squiggly_underline">波浪线</string>
    <string name="strikethrough">删除线</string>
    <string name="underline">下划线</string>
    <string name="highlight_all">Highlight all %s in this book</string>
</resources>